--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Based on pandoc's generated stylesheet.
 
 html {
   line-height: 1.25;
-  font-family: "Segoe UI", Helvetica, Arial, sans-serif;
+  font-family: "Fira Sans", "Segoe UI", Helvetica, Arial, sans-serif;
   font-size: 1.2em;
   color: #1a1a1a;
   background-color: #ffffff;
@@ -30,10 +30,10 @@ p {
   margin: 1em 0;
 }
 a {
-  color: #0969DA;
+  color: #C69A33;
 }
 a:visited {
-  color: #0969DA;
+  color: #C69A33;
 }
 img {
   max-width: 100%;
@@ -122,7 +122,7 @@ header {
 @media (prefers-color-scheme: dark) {
   html {
     color: #ffffff;
-    background-color: #000000;
+    background-color: #211b24;
   }
   code {
     color: #a0a0a0;
